--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -1,11 +1,14 @@
 .color-swatch {
+    margin: 0;
     width: 72px;
     height: 72px;
     overflow: hidden;
     appearance: none;
-    border-radius: calc(var(--control-corner-radius) + 2px);
+    outline: none;
+    border-radius: var(--control-corner-radius);
     &:checked {
+        border-radius: calc(var(--control-corner-radius) + 2px);
         box-shadow: inset 0 0 0 2px var(--accent-color-default),
-                    inset 0 0 0 3.5px var(--background-base);
+                    inset 0 0 0 3px var(--background-base);
     }
 }
