--- a/src/lib/ComponentShowcase/ComponentShowcase.scss
+++ b/src/lib/ComponentShowcase/ComponentShowcase.scss
@@ -23,21 +23,21 @@
 }
 
 :global {
-    @media screen and (max-width: 1224px) {
+    @media only screen and (max-width: 1224px) {
         .DatePicker,
         .TeachingTip {
             visibility: hidden;
         }
     }
 
-    @media screen and (max-width: 856px) {
+    @media only screen and (max-width: 856px) {
         .NavigationView {
             visibility: hidden;
         }
     }
 }
 
-@media screen and (max-width: 620px) {
+@media only screen and (max-width: 620px) {
     .component-showcase {
         display: none;
     }
