--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -342,6 +342,10 @@ body {
     @include flex($direction: column);
 }
 
+p {
+    max-width: 65ch;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
     font: {
