fix types, add relative units

--- a/src/lib/Contributor/Contributor.scss
+++ b/src/lib/Contributor/Contributor.scss
@@ -32,7 +32,7 @@
     margin-left: 8px;
     color: var(--text-color-tertiary);
     font: {
-        size: 12px;
+        size: 1.2rem;
         weight: normal;
     }
     h5 {
@@ -41,7 +41,7 @@
         margin: 0;
         color: var(--text-color-primary);
         font: {
-            size: 14px;
+            size: 1.4rem;
             weight: 600;
         }
     }
