--- a/src/lib/FeatureCard/FeatureCard.scss
+++ b/src/lib/FeatureCard/FeatureCard.scss
@@ -21,7 +21,7 @@
         margin-top: 8px;
         color: var(--text-color-primary);
         font: {
-            size: 18px;
+            size: 1.8rem;
             weight: 600;
         }
     }
@@ -30,7 +30,7 @@
         margin-top: 8px;
         color: var(--text-color-tertiary);
         font: {
-            size: 14px;
+            size: 1.4rem;
             weight: 400;
         }
     }
