--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -1,6 +1,6 @@
 .markdown-body {
     line-height: 1.45;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: var(--text-color-secondary);
 
     // Spacing
@@ -182,7 +182,7 @@
     pre {
         padding: 12px 16px;
         overflow: auto;
-        font-size: 15px;
+        font-size: 1em;
         background-clip: padding-box;
         background-color: var(--card-background-default);
         border: 1px solid var(--card-stroke-default);
