--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -109,7 +109,7 @@
     --overlay-corner-radius: 8px;
 
     // Control Text
-    --control-font-size: 14px;
+    --control-font-size: 1.4rem;
 
     // Border Brushes
     --CircleElevationBorderBrush: 0;
@@ -330,6 +330,7 @@
  */
 
 html, body {
+    font-size: 62.5%;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -340,10 +341,6 @@ body {
     height: fit-content;
     min-height: 100%;
     @include flex($direction: column);
-}
-
-p {
-    max-width: 65ch;
 }
 
 *, *::before, *::after {
