--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -114,15 +114,17 @@
 :global {
     .split-button {
         @include flex($align: center);
-        > .button {
+        .button {
             height: 100%;
             border-radius: 0 !important;
-            &:first-child {
-                border-radius: var(--control-corner-radius) 0 0 var(--control-corner-radius) !important;
-            }
-            &:last-child {
-                border-radius: 0 var(--control-corner-radius) var(--control-corner-radius) 0 !important;
-            }
+        }
+        > .button:first-child,
+        > *:first-child .button {
+            border-radius: var(--control-corner-radius) 0 0 var(--control-corner-radius) !important;
+        }
+        > .button:last-child,
+        > *:last-child .button {
+            border-radius: 0 var(--control-corner-radius) var(--control-corner-radius) 0 !important;
         }
     }
 }
