--- a/src/lib/MenuFlyout/MenuFlyout.scss
+++ b/src/lib/MenuFlyout/MenuFlyout.scss
@@ -1,7 +1,16 @@
 @use "src/styles/mixins" as *;
 
+@keyframes menu-flyout {
+    0% {
+        transform: translateY(-35%);
+    }
+    100% {
+        transform: none;
+    }
+}
+
 .menu-flyout {
-    width: calc(100% - 32px);
+    min-width: calc(100% - 32px);
     height: fit-content;
     margin: 0;
     user-select: none;
@@ -10,18 +19,17 @@
     border-radius: var(--overlay-corner-radius);
     box-shadow: var(--flyout-elevation);
     padding: 2px 0;
-    transition: 250ms cubic-bezier(0, 0, 0, 1) transform;
-}
-
-.menu-flyout-anchor {
-    width: calc(var(--menu-flyout-width, 100%) + 32px);
-    height: calc(var(--menu-flyout-height) + 64px);
-    @include flex($justify: center);
-    overflow: hidden;
-    margin: 4px 0;
-    z-index: 10;
-    position: absolute;
-    left: 50%;
-    top: 100%;
-    transform: translateX(-50%);
+    animation: menu-flyout 200ms cubic-bezier(0, 0, 0, 1); 
+    &-outer {
+        width: calc(var(--menu-flyout-width, 100%) + 32px);
+        height: calc(var(--menu-flyout-height) + 64px);
+        @include flex($justify: center);
+        overflow: hidden;
+        margin: 4px 0;
+        z-index: 10;
+        position: absolute;
+        left: 50%;
+        top: 100%;
+        transform: translateX(-50%);
+    }
 }
