menu API updates

--- a/src/lib/MenuFlyout/MenuFlyoutItem.scss
+++ b/src/lib/MenuFlyout/MenuFlyoutItem.scss
@@ -2,6 +2,7 @@
 
 .menu-flyout-item {
     @include flex($align: center);
+    position: relative;
     text-decoration: none;
     white-space: nowrap;
     border-radius: var(--control-corner-radius);
@@ -19,6 +20,15 @@
         background-color: var(--subtle-color-tertiary);
     }
     &.combo-box-item.selected {
-        background: red;
+        background-color: var(--subtle-color-secondary);
+        &::after {
+            content: '';
+            position: absolute;
+            left:0;
+            height: 50%;
+            width: 3px;
+            border-radius: 3px;
+            background-color: var(--accent-color-default);
+        }
     }
 }
