--- a/src/lib/MenuFlyout/MenuFlyout.scss
+++ b/src/lib/MenuFlyout/MenuFlyout.scss
@@ -19,8 +19,12 @@
     border-radius: var(--overlay-corner-radius);
     box-shadow: var(--flyout-elevation);
     padding: 2px 0;
-    animation: menu-flyout 200ms cubic-bezier(0, 0, 0, 1); 
-    &-outer {
+    animation: menu-flyout 200ms cubic-bezier(0, 0, 0, 1);
+}
+
+:global {
+    .menu-flyout-outer {
+        pointer-events: none;
         width: calc(var(--menu-flyout-width, 100%) + 32px);
         height: calc(var(--menu-flyout-height) + 64px);
         @include flex($justify: center);
@@ -31,5 +35,8 @@
         left: 50%;
         top: 100%;
         transform: translateX(-50%);
+        > * {
+            pointer-events: all;
+        }
     }
 }
