--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -57,7 +57,6 @@
         grid-template-columns: 1fr 1fr;
         height: 100%;
         gap: 64px;
-        max-width: 1920px;
         margin: auto;
         align-items: center;
     }
@@ -82,6 +81,7 @@
         img {
             position: absolute;
             top: 0;
+            right: 0;
             width: auto;
             height: 100%;
             -webkit-user-drag: none;
@@ -97,7 +97,7 @@
         }
     }
     &image-container {
-        @include flex($direction: row, $align: center);
+        @include flex($align: center);
         width: 100%;
         height: 100%;
     }
