--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -3,46 +3,55 @@
 .page-section {
     position: relative;
     z-index: 1;
-    padding: 72px;
+    
+    :global {
+        h1, h2, h3 {
+            margin: 0;
+            font-weight: 600;
+            color: var(--text-color-primary);
+        }
+        h1 {
+            font-size: 7.2rem;
+        }
+        h2 {
+            font-size: 4.8rem;
+        }
+        h3 {
+            font-size: 3.2rem;
+        }
+        p {
+            max-width: 65ch;
+            margin-bottom: 24px;
+            margin-top: 12px;
+            line-height: 1.65;
+            color: var(--text-color-tertiary);
+            font: {
+                size: 1.6rem;
+                weight: 400;
+            }
+        }
 
-    @media only screen and (max-width: 640px) {
-        padding: 48px;
-    }
+        hr {
+            margin: 0;
+            margin-bottom: 24px;
+            border: none;
+            border-top: 1px solid var(--divider-color-default);
+        }
 
-    h1, h2, h3 {
-        margin: 0;
-        font-weight: 600;
-        color: var(--text-color-primary);
-    }
-    h1 {
-        font-size: 7.2rem;
-    }
-    h2 {
-        font-size: 4.8rem;
-    }
-    h3 {
-        font-size: 3.2rem;
-    }
-    p {
-        max-width: 65ch;
-        margin-bottom: 24px;
-        margin-top: 12px;
-        line-height: 1.65;
-        color: var(--text-color-tertiary);
-        font: {
-            size: 1.6rem;
-            weight: 400;
+        .buttons-spacer {
+            @include flex($inline: true, $wrap: true, $gap: 8px);
         }
     }
-
-    hr {
-        margin: 0;
-        margin-bottom: 24px;
-        border: none;
-        border-top: 1px solid var(--divider-color-default);
-    }
-
-    .buttons-spacer {
-        @include flex($inline: true, $wrap: true, $gap: 8px);
+    &-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        max-width: 2048px;
+        padding: 72px;
+    
+        @media only screen and (max-width: 640px) {
+            padding: 48px;
+        }
     }
 }
