--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -8,6 +8,14 @@
         height: 75vh;
         min-height: 584px;
         max-height: 1024px;
+        .page-section-inner {
+            position: relative;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 64px;
+            margin: auto;
+            align-items: center;
+        }
         .button {
             padding: 7px 12px;
             svg {
@@ -51,15 +59,6 @@
 }
 
 .hero- {
-    &grid {
-        position: relative;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        height: 100%;
-        gap: 64px;
-        margin: auto;
-        align-items: center;
-    }
     &left {
         @include flex($direction: column, $justify: center);
         flex: 1 1 auto;
@@ -77,6 +76,7 @@
         }
     }
     &right {
+        @include flex($align: center);
         height: 100%;
         img {
             position: absolute;
@@ -98,8 +98,10 @@
     }
     &image-container {
         @include flex($align: center);
+        position: relative;
         width: 100%;
         height: 100%;
+        max-height: 768px;
     }
 }
 
@@ -127,12 +129,11 @@
     }
 }
 
-:global {
-    #design-section {
-        @include flex($direction: column, $align: center);
-        overflow: hidden;
-        text-align: center;
-    }
+
+:global(#design-section .page-section-inner) {
+    @include flex($direction: column, $align: center);
+    overflow: hidden;
+    text-align: center;
 }
 
 .design-image {
@@ -206,9 +207,13 @@
     }
 }
 
-:global(#features-section) {
-    @include flex($wrap: true);
-    background-color: var(--background-base);
+:global {
+    #features-section {
+        background-color: var(--background-base);
+        .page-section-inner {
+            @include flex($wrap: true);
+        }
+    }
 }
 
 .features-section- {
@@ -250,10 +255,12 @@
 
 :global {
     #themes-section {
-        @include flex($align: center);
         min-height: 600px;
         background-color: var(--card-background-secondary);
         overflow: hidden;
+        .page-section-inner {
+            @include flex($align: center);
+        }
         &:not(.theme-1) {
             background-color: var(--background-base);
             ::selection {
@@ -350,13 +357,8 @@
     }
 }
 
-:global(#community-section) {
-    @include flex($justify: center);
-    min-height: fit-content;
-    overflow: hidden;
-    .buttons-spacer {
-        justify-content: center;
-    }
+:global(#community-section .buttons-spacer) {
+    justify-content: center;
 }
 
 .community-section- {
