--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -5,12 +5,27 @@
 }
 
 .navbar {
+    position: relative;
+    z-index: 100;
     flex: 0 0 auto;
     overflow: hidden;
     user-select: none;
     justify-content: space-between;
     padding: 12px 18px;
     background-color: var(--background-base);
+}
+
+@media screen and (max-width: 648px) {
+    .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 64px;
+    }
+    :global(body) {
+        padding-top: 62px;
+    }
 }
 
 .item {
@@ -69,22 +84,57 @@
 
 .buttons {
     display: flex;
-    a {
-        @include flex($align: center, $justify: center);
-        margin-left: 8px;
-        width: 36px;
-        height: 36px;
-        color: var(--text-color-secondary);
-        border-radius: var(--control-corner-radius);
-        text-decoration: none;
-        &:hover {
-            background-color: var(--subtle-color-secondary);
+    z-index: 1;
+}
+
+.button {
+    @include flex($align: center, $justify: center);
+    margin-left: 8px;
+    width: 34px;
+    height: 34px;
+    border: none;
+    background-color: transparent;
+    color: var(--text-color-secondary);
+    border-radius: var(--control-corner-radius);
+    text-decoration: none;
+    &:hover {
+        background-color: var(--subtle-color-secondary);
+    }
+    &:active {
+        background-color: var(--subtle-color-tertiary);
+    }
+    :global(svg) {
+        transition: 130ms cubic-bezier(0.16, 0.16, 0, 1) transform;
+        @include icon($size: 18px);
+    }
+    &.sidebar-button {
+        width: 38px;
+        :global {
+            svg {
+                width: 16px;
+                &:active {
+                    transform: scaleX(0.65);
+                }
+            }
         }
-        &:active {
-            background-color: var(--subtle-color-tertiary);
-        }
-        :global(svg) {
-            @include icon($size: 18px);
-        }
+    }
+}
+
+.sidebar {
+    @include flex($direction: column, $justify: space-between);
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100vh;
+    overflow: auto;
+    padding-top: 62px;
+    border-radius: var(--overlay-corner-radius);
+    background-color: var(--background-base);
+    border: 1px solid var(--surface-stroke-default);
+    hr {
+        margin: 4px 0;
+        border: none;
+        border-top: 1px solid var(--divider-color-default);
     }
 }
