--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -107,15 +107,16 @@
         transition: 130ms cubic-bezier(0.16, 0.16, 0, 1) transform;
         @include icon($size: 18px);
     }
-    &.sidebar-button {
+}
+
+:global {
+    .navbar .button.sidebar-button {
         width: 38px;
-        :global {
-            svg {
-                width: 16px;
-                &:active {
-                    transform: scaleX(0.65);
-                }
-            }
+        &:active svg {
+            transform: scaleX(0.65);
+        }
+        svg {
+            width: 16px;
         }
     }
 }
