--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -15,19 +15,6 @@
     background-color: var(--background-base);
 }
 
-@media screen and (max-width: 648px) {
-    .navbar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 64px;
-    }
-    :global(body) {
-        padding-top: 62px;
-    }
-}
-
 .item {
     color: var(--text-color-secondary);
     border-radius: var(--control-corner-radius);
@@ -122,7 +109,8 @@
 }
 
 .sidebar {
-    @include flex($direction: column, $justify: space-between);
+    display: none;
+    transform: translateX(100%);
     position: fixed;
     top: 0;
     right: 0;
@@ -133,9 +121,30 @@
     border-radius: var(--overlay-corner-radius);
     background-color: var(--background-base);
     border: 1px solid var(--surface-stroke-default);
+    transition: 120ms cubic-bezier(0.1, 0.9, 0.2, 1);
+    &.visible {
+        transition-duration: 350ms;
+        transform: none;
+    }
     hr {
         margin: 4px 0;
         border: none;
         border-top: 1px solid var(--divider-color-default);
+    }
+}
+
+@media screen and (max-width: 648px) {
+    .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 64px;
+    }
+    .sidebar {
+        @include flex($direction: column, $justify: space-between);
+    }
+    :global(body) {
+        padding-top: 62px;
     }
 }
