--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,13 +3,21 @@
 @import url("https://rsms.me/inter/inter.css");
 
 @font-face {
-    font-family: "FluentSystemIcons-Regular";
-    src: url("/fonts/FluentSystemIcons-Regular.ttf") format("truetype");
+    font-family: 'Inter var';
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url("static/fonts/Inter-roman.var.woff2") format("woff2");
+    font-named-instance: 'Regular';
 }
-  
+
 @font-face {
-    font-family: "FluentSystemIcons-Filled";
-    src: url("/fonts/FluentSystemIcons-Filled.ttf") format("truetype");
+    font-family: 'Inter var';
+    font-style: italic;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url("static/fonts/Inter-italic.var.woff2") format("woff2");
+    font-named-instance: 'Italic';
 }
 
 /*
