--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -12,7 +12,6 @@
     user-select: none;
     justify-content: space-between;
     padding: 12px 18px;
-    background-color: var(--background-base);
 }
 
 .item {
@@ -118,9 +117,8 @@
     height: 100vh;
     overflow: auto;
     padding-top: 62px;
-    border-radius: var(--overlay-corner-radius);
     background-color: var(--background-base);
-    border: 1px solid var(--surface-stroke-default);
+    border-left: 1px solid var(--surface-stroke-default);
     transition: 120ms cubic-bezier(0.1, 0.9, 0.2, 1);
     &.visible {
         transition-duration: 350ms;
@@ -140,6 +138,9 @@
         left: 0;
         width: 100%;
         height: 64px;
+        overflow: visible;
+        background-color: var(--mica-tint);
+        backdrop-filter: blur(240px) saturate(150%);
     }
     .sidebar {
         @include flex($direction: column, $justify: space-between);
