--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -5,6 +5,7 @@
 }
 
 .navbar {
+    background-color: var(--background-base);
     position: relative;
     z-index: 100;
     flex: 0 0 auto;
@@ -139,7 +140,7 @@
         width: 100%;
         height: 64px;
         overflow: visible;
-        background-color: var(--mica-tint);
+        background-color: rgba(var(--mica-tint), var(--mica-tint-opacity));
         backdrop-filter: blur(240px) saturate(150%);
     }
     .sidebar {
