--- a/src/lib/Contributor/Contributor.scss
+++ b/src/lib/Contributor/Contributor.scss
@@ -21,7 +21,7 @@
     }
     &:hover {
         transform: translateY(-2px);
-        box-shadow: var(--dialog-elevation);
+        box-shadow: var(--window-elevation);
     }
 }
 
