--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -15,6 +15,14 @@
     flex: 1 1 auto;
     display: flex;
     background-color: var(--background-base);
+    canvas {
+        z-index: -1;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
 }
 
 .sidebar {
